--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "flowbite-react": "^0.3.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
